move image out of container, fix css

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,24 @@
   text-align: center;
 }
 
-.App-header {
+.header {
   background-color: #222;
   padding: 20px;
   color: white;
 }
 
+.header a {
+  color: white;
+  margin: 0 10px;
+}
+
 .App-intro {
   font-size: large;
+}
+
+.main-content__wrapper {
+  display: flex;
+  justify-content: flex-start;
 }
 
 .content__wrapper {
@@ -26,36 +36,41 @@
   font-weight: bold;
 }
 
-ul {
+ul,
+ol {
   font-size: 18px;
+  line-height: 24px;
+}
+
+ul {
   list-style: none;
   padding: 0;
+}
+
+ol {
+  padding-left: 34px;
 }
 
 /* SHARED */
 .music__wrapper,
 .home__wrapper,
-.about__wrapper {
+.about__wrapper,
+.portfolio__image-wrapper {
   padding: 20px;
   text-align: left;
 }
 
 /* HOME PAGE */
-.home__wrapper {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.home__wrapper img {
-  height: 320px;
-}
-
 .home__text-wrapper {
   font-size: 18px;
 }
 
-.home__image-wrapper {
+.portfolio__image-wrapper {
   padding-right: 20px;
+}
+
+.portfolio__image-wrapper img {
+  height: 320px;
 }
 
 /* ABOUT PAGE */
@@ -63,35 +78,36 @@ ul {
   margin-top: 10px;
 }
 
+.about__wrapper h1 {
+  margin-top: 0;
+}
+
 /* MUSIC PAGE */
 .music__wrapper {
   padding-top: 0;
 }
 
-.music__album-img,
-.music__text-wrapper {
-  display: inline-block;
-  vertical-align: top;
+.music__meta-wrapper a {
+  display: flex;
 }
 
 .music__text-wrapper {
   padding-left: 10px;
-  width: 70%;
 }
 
-
 /* MOBILE */
-@media screen and (max-width: 600px) {
-  .home__wrapper {
+@media screen and (max-width: 700px) {
+
+  .main-content__wrapper {
     display: block;
   }
 
-  .home__image-wrapper {
-    margin-bottom: 20px;
+  .portfolio__image-wrapper {
+    padding-bottom: 0;
     text-align: center;
   }
 
-  .home__wrapper img {
+  .portfolio__image-wrapper img {
     height: auto;
     margin: auto;
     padding-right: 0;
